{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "0c5bffba-3b3f-4a68-9056-a5ab1514b4c7",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7597c544-aa30-47b5-b646-3fb1b7fdd9b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightShoot",
                    "type": "Button",
                    "id": "807b2738-0c51-4487-bbc9-21067abd7321",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyShoot",
                    "type": "Button",
                    "id": "589783d5-e203-4f5b-a5cd-6ad85ccf4822",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3a645b61-1a42-4bb6-9b3f-91dcc92c8d0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b90eb73a-f07b-4d7d-83b2-df10743b6978",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "59666953-417d-47d0-b155-c922f14a1792",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e17d9b8a-931e-4b04-9b36-fbe26076c3a1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "27ab04ff-89c3-420c-bbe6-621803624f36",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "16d91345-047e-4680-8a8a-73f367164604",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cbfa097e-6753-418a-8ee6-604aafbc5e1d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold,Tap",
                    "processors": "",
                    "groups": "",
                    "action": "LightShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76d8459f-0d0d-406d-9549-7e1517496bdf",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap(duration=0.4,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c4d6828-96cd-4b3d-84a6-47418bce977e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}